play-with-sld/kubernetes/k8s/istio/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sld-dashboard
spec:
  hosts:
  - sld-dashboard.acme.com
  gateways:
  - sld-dashboard
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: sld-dashboard
        port:
          number: 5000

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: sld-dashboard
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - sld-dashboard.acme.com
